# VoxelEngine

./: .gitignore  .gitmodules  BuildDebug.sh  CMakeLists.txt  LICENSE  README.md
res/shaders/: Triangle.frag.glsl  Triangle.vert.glsl  basic_voxel_raytracer.comp.glsl  gradient_color.comp.glsl
src/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  DeletionQueue.hpp  Descriptors.cpp  Descriptors.hpp  Engine.cpp  Engine.hpp  EventHandler.cpp  EventHandler.hpp  Events.cpp  Events.hpp  Image.cpp  Image.hpp  ImmediateSubmit.cpp  ImmediateSubmit.hpp  Main.cpp  PipelineBuilder.cpp  PipelineBuilder.hpp  ShaderModule.cpp  ShaderModule.hpp  VkCheck.hpp  Window.cpp  Window.hpp
